Updated background changer

--- a/index.html
+++ b/index.html
@@ -24,12 +24,14 @@
             <button class="twitter-button" id="twitter" title="Tweet This!">
                 <i class="fab fa-twitter"></i>
             </button>
+            <button id="change-background">Change Background</button>
             <button id="new-quote">New Quote</button>
         </div>
     </div>
     <!-- Loader -->
     <div class="loader" id="loader"></div> 
     <!-- Importing Javascript -->
+    <script src="background.js"></script>
     <script src="script.js"></script>
 </body>
 </html>
